# baro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  baro.c  baro.h  baro_test.c
.github/workflows/: cmake-test.yml
examples/: assert.c  assert.txt  basic.c  basic.txt  empty.c  empty.txt  partitioning.c  partitioning.txt  stress_tests.c  stress_tests.txt  subtests.c  subtests.txt  tag_filtering.c  tag_filtering.txt  unicode_encoding.c  unicode_encoding.txt
